--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "apexcharts": "^3.29.0",
-    "react-apexcharts": "^1.3.9",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reset-css": "^5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
