--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.5",
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
